CRUD family member functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+/.idea/.idea.DNP_Assignements/.idea/codeStyles/codeStyleConfig.xml
+/.idea/.idea.DNP_Assignements/.idea/contentModel.xml
+/.idea/.idea.DNP_Assignements/.idea/encodings.xml
+/.idea/.idea.DNP_Assignements/.idea/indexLayout.xml
+/.idea/.idea.DNP_Assignements/.idea/modules.xml
+/.idea/.idea.DNP_Assignements/.idea/projectSettingsUpdater.xml
+/.idea/.idea.DNP_Assignements/.idea/vcs.xml
+/.idea/.idea.DNP_Assignements/.idea/workspace.xml
